Fixed issue: Make sure max width of form-control won't overflow.

--- a/src/FormControl/styles/common.less
+++ b/src/FormControl/styles/common.less
@@ -31,6 +31,8 @@
 // Vertical forms
 .@{ns}form-vertical .@{ns}form-group .@{ns}form-control-wrapper {
   display: inline-block;
+  // Make sure max width won't overflow.
+  max-width: 100%;
 }
 
 // Horizontal forms
